--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gstack",
-  "displayName": "GStack",
-  "description": "Language Independant VSCode Default Development Stack of Extensions",
+  "name": "fstack",
+  "displayName": "FStack",
+  "description": "Frontend Developer VSCode Extension Pack",
   "version": "1.0.0",
   "engines": {
     "vscode": "^1.x.x"
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/seonglae/gstack"
+    "url": "https://github.com/seonglae/fstack"
   },
   "license": "MIT",
   "publisher": "seonglae",
@@ -24,8 +24,22 @@
     "geology"
   ],
   "extensionPack": [
-    "SmartMonkey.geotools",
-    "jumpinjackie.vscode-map-preview",
-    "RandomFractalsInc.geo-data-viewer"
+    "george-alisson.html-preview-vscode",
+    "SimonSiefke.html-preview",
+    "SimonSiefke.svg-preview",
+    "sysoev.language-stylus",
+    "humao.rest-client",
+    "thisismanta.stylus-supremacy",
+    "tanhakabir.rest-book",
+    "esbenp.prettier-vscode",
+    "HookyQR.beautify",
+    "auchenberg.vscode-browser-preview",
+    "akamud.vscode-javascript-snippet-pack",
+    "lllllllqw.jsdoc",
+    "formulahendry.auto-close-tag",
+    "stylelint.vscode-stylelint",
+    "formulahendry.auto-complete-tag",
+    "formulahendry.auto-rename-tag",
+    "msjsdiag.debugger-for-chrome"
   ]
 }
