--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wstack",
   "displayName": "WStack",
   "description": "Web Developer VSCode Extension Pack",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.x.x"
   },
@@ -21,7 +21,11 @@
     "Extension Packs"
   ],
   "keywords": [
-    "geology"
+    "web",
+    "frontend",
+    "backend",
+    "http",
+    "rest"
   ],
   "extensionPack": [
     "humao.rest-client",
@@ -33,6 +37,7 @@
     "formulahendry.auto-close-tag",
     "formulahendry.auto-complete-tag",
     "formulahendry.auto-rename-tag",
+    "naumovs.color-highlight",
     "msjsdiag.debugger-for-chrome",
     "SimonSiefke.svg-preview"
   ]
